Assets: Style:  Ensure that text remains visible using a fallback

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 @font-face {
     font-family: 'ComicNeue-Regular';
     src: url('/assets/vendor/fonts/ComicNeue-Regular.ttf');
+    font-display: swap;
 }
 
 :root {
